[gd_scene load_steps=12 format=3 uid="uid://b83qk7bj3abn"]

[ext_resource type="Script" path="res://hardware/radar_panel/radar_panel.gd" id="1_4tnm2"]
[ext_resource type="Texture2D" uid="uid://goxtvblbu1f2" path="res://hardware/radar_panel/assets/radar-center.png" id="3_bj0be"]
[ext_resource type="StyleBox" uid="uid://dr0e5uu6j0akk" path="res://hardware/radar_panel/radar_background.tres" id="3_wh8w6"]
[ext_resource type="Texture2D" uid="uid://gctmrua75bu4" path="res://hardware/radar_panel/assets/ping.png" id="5_y18qg"]
[ext_resource type="Texture2D" uid="uid://djuqigy1exkwc" path="res://hardware/radar_panel/assets/thrust-up.png" id="6_36iww"]
[ext_resource type="Texture2D" uid="uid://ci3mha1t1pyhm" path="res://hardware/radar_panel/assets/thrust-towards.png" id="7_r0umt"]
[ext_resource type="Texture2D" uid="uid://bjihdejwr3mbm" path="res://hardware/radar_panel/assets/thrust-away.png" id="8_u45e5"]
[ext_resource type="Texture2D" uid="uid://boma4iqiehv1g" path="res://hardware/radar_panel/assets/rotate-forward.png" id="9_mxnll"]
[ext_resource type="Texture2D" uid="uid://b1m5ixqx8nvvj" path="res://hardware/radar_panel/assets/rotate-ccw.png" id="11_daio2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_185hk"]
albedo_color = Color(0.152941, 0.380392, 0.509804, 0.588235)

[sub_resource type="QuadMesh" id="QuadMesh_yedgm"]

[node name="RadarPanel" type="Node3D"]
script = ExtResource("1_4tnm2")

[node name="Device" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_185hk")
mesh = SubResource("QuadMesh_yedgm")

[node name="Screen" type="SubViewport" parent="."]
unique_name_in_owner = true

[node name="Active" type="Node2D" parent="Screen"]

[node name="XZScan" type="Panel" parent="Screen/Active"]
offset_right = 250.0
offset_bottom = 250.0
theme_override_styles/panel = ExtResource("3_wh8w6")
metadata/_edit_use_anchors_ = true

[node name="XZCenter" type="Sprite2D" parent="Screen/Active"]
z_index = 100
position = Vector2(125, 125)
texture = ExtResource("3_bj0be")

[node name="XYScan" type="Panel" parent="Screen/Active"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 262.0
offset_right = 250.0
offset_bottom = 512.0
grow_vertical = 0
theme_override_styles/panel = ExtResource("3_wh8w6")
metadata/_edit_use_anchors_ = true

[node name="XYCenter" type="Sprite2D" parent="Screen/Active"]
z_index = 100
position = Vector2(125, 387)
texture = ExtResource("3_bj0be")

[node name="ZYScan" type="Panel" parent="Screen/Active"]
layout_direction = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 262.0
offset_top = 262.0
offset_right = 512.0
offset_bottom = 512.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = ExtResource("3_wh8w6")
metadata/_edit_use_anchors_ = true

[node name="ZYCenter" type="Sprite2D" parent="Screen/Active"]
z_index = 100
position = Vector2(387, 387)
texture = ExtResource("3_bj0be")

[node name="References" type="Control" parent="Screen"]
visible = false
custom_minimum_size = Vector2(10, 10)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RadarPing" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("5_y18qg")

[node name="ThrustUp" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("6_36iww")

[node name="ThrustTowards" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("7_r0umt")

[node name="ThrustAway" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("8_u45e5")

[node name="ThrustRight" type="Sprite2D" parent="Screen/References"]
rotation = 1.5708
texture = ExtResource("6_36iww")

[node name="ThrustLeft" type="Sprite2D" parent="Screen/References"]
rotation = -1.5708
texture = ExtResource("6_36iww")

[node name="ThrustDown" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("6_36iww")
flip_v = true

[node name="PitchPos" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("9_mxnll")
flip_v = true

[node name="PitchNeg" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("9_mxnll")

[node name="YawPos" type="Sprite2D" parent="Screen/References"]
rotation = -1.5708
texture = ExtResource("9_mxnll")

[node name="YawNeg" type="Sprite2D" parent="Screen/References"]
rotation = 1.5708
texture = ExtResource("9_mxnll")

[node name="RollPos" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("11_daio2")

[node name="RollNeg" type="Sprite2D" parent="Screen/References"]
texture = ExtResource("11_daio2")
flip_h = true

[node name="CanvasLayer" type="CanvasLayer" parent="Screen"]
